--- a/cont.html
+++ b/cont.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="contacts__arrow">
-        <a href="resume.html"><button style="background-color : grey;"><img src="assets//img/arrow.png" width="50"
+        <a href="index.html"><button style="background-color : grey;"><img src="assets//img/arrow.png" width="50"
                     height="50" alt="Стрелка"></button></a>
     </div>
 
