--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         </section>
 
         <section>
-            <h3>Образование</h3>
-            <p> Закончила финансово промышленную академию Факультет Экономист. Специализация Финансы и кредит</p>
+              <h3>Образование</h3>
+            <p> Закончила Открытый технологический институт.</p>
+            <p>Факультет Экономист</p>
+            <p>Специализация Финансы и кредит</p>
         </section>
 
         <section class="technologyStack">
