--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <h4>Салыкина Галина Михайловна</h4>
                 <p> tel: 8(925)052-83-41</p>
                 <p> email: galya1985@bk.ru</p>
+                <p><a href="https://github.com/galya-cmd/galya-cmd">GitHub</a> </p>
             </div>
         </section>
 
