--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <div class="main">
-        <h1>Моя цель - писать сайты на проффессиональном уровне</h1>
+        <h1>Моя цель - писать сайты на профессиональном уровне</h1>
         <section class="contacts">
             <div class="contacts__photo">
                 <img src="assets/img/photo.jpg" alt="photo" />
